# tree-sitter-terra

./: Cargo.toml  README.md  grammar.js
corpus/: functions.txt  terra_statements.txt
src/: grammar.json  node-types.json  parser.c  scanner.cc
