[package]
name = "tree-sitter-terra"
description = "terra grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "terra"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-terra"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
